--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,61 @@ body {
 }
 
 #header-container {
-	font-size: 80px;
-	font-weight: 800;
 	text-align: center;
 	margin: 0 auto;
 	height: 100px;
 }
 
+#header {
+	font-size: 80px;
+	font-weight: 800;
+}
+
+#instructions {
+	font-size: 30px;
+}
+
 #spot-container {
 	width: 650px;
 	text-align: center;
-	margin: 0 auto;
+	margin: 60px auto;
 	background-color: yellow;
-	padding: 20px 0px;
+	padding: 50px 0px 20px 0px;
 	border: 5px solid black;
+}
+
+#button-container {
+	width: 800px;
+	text-align: center;
+	display: block;
+	margin: 0 auto 0 -75px;
+}
+
+button {
+	font-family: Futura;
+	font-size: 30px;
+	font-weight: 800;
+	height: 50px;
+	width: 50px;
+	border-radius: 5px;
+	border: none;
+	margin-top: -30px;
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+/*#left-button {
+	margin-left: -5px;
+}
+
+#right-button {
+	margin-right: -5px;
+}
+*/
+
+.column {
+	width: 80px;
+	display: inline-block;
 }
 
 .spot {
