--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,40 @@ body {
 
 #instructions {
 	font-size: 30px;
+	display: none;
+}
+
+#name-input-container {
+	text-align: center;
+	margin: 50px auto 0px auto;
+}
+
+input {
+	height: 50px;
+	width: 300px;
+	font-family: Futura;
+	font-size: 20px;
+}
+
+#start-button-container {
+	text-align: center;
+	margin: 50px auto 0px auto;
+}
+
+#start-button {
+	height: 80px;
+	width: 180px;
+	font-size: 50px;
+}
+
+#player-order-container {
+	font-size: 60px;
+	text-align: center;
+	margin: 50px auto 0px auto;
+}
+
+#dice-roll {
+	display: none;
 }
 
 #spot-container {
@@ -24,6 +58,7 @@ body {
 	background-color: yellow;
 	padding: 50px 0px 20px 0px;
 	border: 5px solid black;
+	display: none;
 }
 
 #button-container {
