--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 }*/
 
 body {
-	/*font-family: Futura;*/
 	font-family: 'Candice';
 	background-image: 
 	linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), 
@@ -76,6 +75,8 @@ input {
 	font-size: 50px;
 	font-weight: normal;
 	border-radius: 60px;
+	border: 5px solid #c9ff00;
+	box-shadow: 0 0 20px #c9ff00;
 	margin: 0 auto;
 	text-align: center;
 }
@@ -206,6 +207,8 @@ button:hover {
 	font-size: 35px;
 	font-weight: normal;
 	border-radius: 50px;
+	border: 5px solid #c9ff00;
+	box-shadow: 0 0 20px #c9ff00;
 }
 
 @keyframes color_change {
