--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,39 @@ body {
 	color: #cc2477;
 }
 
+#board-size-container {
+	text-align: center;
+	margin: 110px auto 50px auto;
+	font-size: 30px;
+	display: none;
+}
+
+#board-size-text {
+	color: #cc2477;
+}
+
+#rows-text-container {
+	margin-top: 20px;
+	display: inline-block;
+}
+
+#columns-text-container {
+	margin-top: 20px;
+	display: inline-block;
+}
+
+#next-button {
+	width: 200px;
+	height: 80px;
+	font-size: 50px;
+	font-weight: normal;
+	border-radius: 60px;
+	border: 5px solid #c9ff00;
+	box-shadow: 0 0 10px #c9ff00;
+	margin: 50px auto;
+	text-align: center;
+}
+
 #name-input-container {
 	text-align: center;
 	margin: 110px auto 0px auto;
@@ -115,7 +148,8 @@ input {
 }
 
 #spot-container {
-	width: 580px;
+	max-width: 65%;
+	min-width: 40%;
 	text-align: center;
 	margin: 100px auto 0px auto;
 	background-color: rgba(99, 134, 145, 0.9);
