--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
 
 #board-size-container {
 	text-align: center;
-	margin: 110px auto 50px auto;
+	margin: 110px auto 30px auto;
 	font-size: 30px;
 	display: none;
 }
@@ -86,6 +86,12 @@ body {
 #name-input-container {
 	text-align: center;
 	margin: 110px auto 0px auto;
+}
+
+#name-text {
+	font-size: 30px;
+	color: #ff2d95;
+	margin-bottom: 30px;
 }
 
 input {
@@ -148,8 +154,6 @@ input {
 }
 
 #spot-container {
-	max-width: 65%;
-	min-width: 40%;
 	text-align: center;
 	margin: 100px auto 0px auto;
 	background-color: rgba(99, 134, 145, 0.9);
